feat: execute blocks starting from genesis (#340)
Co-authored-by: Georgi Georgiev <georgi.getz@outlook.com>
Co-authored-by: David Petrov <david.petrov@limechain.tech>
Co-authored-by: Georgi Georgiev <georgi.getz@outlook.com>
Co-authored-by: vikinatora <vikinatora@gmail.com>